--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,12 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.testng</groupId>
-			<artifactId>testng</artifactId>
-			<version>7.5.1</version>
-		</dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.10.2</version>
+    <scope>test</scope>
+</dependency>
+
 
 		<dependency>
 			<groupId>com.aventstack</groupId>
