--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<maven.compiler.source>21.0.3</maven.compiler.source>
 		<maven.compiler.target>21.0.3</maven.compiler.target>
 		<extentreports-version>5.0.8</extentreports-version>
+		<java.version>21</java.version>
   </properties>
 
   <dependencyManagement>
