--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
           <version>3.3.1</version>
         </plugin>
         <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.13.0</version>
           <configuration>
